Thu Dec 16 14:14:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Flag_Manip.cpp:
          Instead of checking for ACE_WIN32 or VXWORKS or ACE_LACKS_FCNTL,
          only check for ACE_LACKS_FCNTL, win32 and VxWorks have this define
          already set

Thu Dec 16 14:07:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-lite.h:
          Removed commected out typedef in VxWorks part

Thu Dec 16 13:49:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/QOS/Simple/QoS_Util.{h,cpp}:
        * examples/QOS/Simple/sender.cpp:
        * examples/QOS/Simple/receiver.cpp:
          Fixed compile problems in unicode builds

Thu Dec 16 13:03:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Reactor/FIFO/client.cpp:
          Fixed link errors in unicode builds

Thu Dec 16 13:00:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Reactor/Misc/test_timer_queue.cpp:
        * examples/Reactor/Misc/test_signals_2.cpp:
        * examples/Reactor/Misc/test_signals_1.cpp:
        * examples/Reactor/Misc/test_reactors.cpp:
        * examples/Reactor/Misc/test_event_handler_t.cpp:
        * examples/Reactor/Misc/test_early_timeouts.cpp:
          Fixed link errors in unicode builds

        * examples/Reactor/Misc/Reactor_Misc.mpc:
          Added missing test_event_handler_t

Thu Dec 16 10:18:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_gnuwin32_common.GNU:
          Only set FL and GL flags when they are not set

        * include/makeinclude/wrapper_macros.GNU:
          Removed setting of PACE root, we don't use this anymore

Wed Dec 15 17:05:22 2004  Steve Huston  <shuston@riverace.com>

	* tests/Test_Output.cpp: When resetting msg_ostream to cerr, specify
	  0 for delete_ostream. ACE_Log_Msg is not allowed to delete cerr.
	  Fixes the crash in Logging_Strategy_Test.
