@@ -188,10 +188,10 @@ private:
   /// HANDLE for the open mapping.
   ACE_HANDLE file_mapping_;
 
-#if defined (__Lynx__)
+#if defined (ACE_HAS_LYNX_BROKEN_MMAP)
   /// Flag to indicate that PROT_WRITE has been enabled.
   int write_enabled_;
-#endif /* __Lynx__ */
+#endif /* ACE_HAS_LYNX_BROKEN_MMAP */
 
   /// Keeps track of whether we need to close the handle.  This is set
   /// if we opened the file.
